# LLEAP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.github/: ci.yaml
Docker/: Docker-Compose.yml  dockerfile  entrypoint.sh
exo_control/: CMakeLists.txt  package.xml
exo_control/exo_control/: bluetoothesp32.py  bluetoothscanner.py
exo_control/include/exo_control/: visbility_control.h
exo_control/src/: lleap_exo_control.yaml  ros2_control_node.cpp  ros2_moveit.cpp
exo_description/: CMakeLists.txt  package.xml
exo_description/meshes/: ankle.STL  back.STL  hip_base.STL
exo_description/urdf/: exo_material_colors.xacro  lleap_exo.urdf.xacro  lleap_exo_gazebo.xacro  lleap_exo_joint_limits.xacro
exo_gazebo/: CMakeLists.txt  package.xml
exo_gazebo/launch/: gazebo.launch.py
exo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
exo_moveit/config/: lleap_exo.urdf.xacro  ros2_controllers.yaml
exo_moveit/exo_moveit/: logjointstates.py
exo_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
exo_rviz/: CMakeLists.txt  package.xml
exo_rviz/launch/: display.launch.py  gazebo.launch.py
launch/: gazebo.launch.py  preliminary_exo.launch.py
meshes/: thigh.STL
models/: gazebo_sim.xacro  lleap_exo.urdf  lleap_exo.urdf.xacro  lleap_exo_physical_params.csv
moveit2_simulation/: CMakeLists.txt  package.xml
moveit2_simulation/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  lleap_exo.ros2_control.xacro  lleap_exo.srdf  lleap_exo.urdf.xacro  moveit_controllers.yaml
moveit2_simulation/launch/: move_group.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
preliminary-simulation/launch/: gazebo.launch.py
preliminary-simulation/meshes/: shank.STL
preliminary-simulation/models/: lleap_exo.urdf.xacro
rviz/: urdf_config.rviz
