<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exo_description</name>
  <version>0.1.0</version>
  <description>Contains URDF and meshes used for simulation.</description>
  <maintainer email="lewtermax@gmail.com">mlewt</maintainer>
  <maintainer email="kylequinlan09@gmail.com">Kyle Quinlan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
