<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exo_gazebo</name>
  <version>1.0.0</version>
  <description>Run simulated robot through gazebo.</description>
  <maintainer email="kylequinlan09@gmail.com">kylequinlan</maintainer>
  <maintainer email="lewtermax@gmail.com">mlewt</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
